--- a/src/DealDetail.css
+++ b/src/DealDetail.css
@@ -178,7 +178,7 @@
   font-size: 18px;
   padding: 12px 50px;
   color: #fff;
-  background: linear-gradient(45deg, #6200ff, #9940ff);
+  background: linear-gradient(45deg, #6200ff, #851bff);
   border: none;
   border-radius: 12px;
   cursor: pointer;
