--- a/src/MyResponses.css
+++ b/src/MyResponses.css
@@ -22,12 +22,18 @@
 
 .response-item {
   background: #2c2c2c;
-  border: 1px solid #444;
+  border: 2px solid #444;
   border-radius: 10px;
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
   transition: background 0.3s, border-color 0.3s;
+}
+
+.response-item a {
+  margin-left: 5px;
+  text-decoration:wavy;
+  color: #ccc
 }
 
 .response-item:hover {
