--- a/src/components/OrderDetail.css
+++ b/src/components/OrderDetail.css
@@ -269,4 +269,10 @@
   background-color: #5300c8;
 }
 
+.responses {
+  color: #444444;
+  font-weight: 600;
+  font-size: 15px;
+  margin-bottom: 20px;
+}
 
