--- a/src/Work.css
+++ b/src/Work.css
@@ -1,4 +1,3 @@
-/* Work.css */
 .work-container {
   max-width: 800px;
   margin: 0 auto;
@@ -48,6 +47,7 @@
   padding: 10px;
   margin-top: 20px;
   margin-bottom: 10px;
+  overflow: hidden; /* Prevent scrolling of the entire page */
 }
 
 .chat-messages {
@@ -66,6 +66,7 @@
 }
 
 .message p {
+  margin-bottom: 5px;
   word-wrap: break-word; /* Перенос длинных слов */
   white-space: pre-wrap; /* Сохранение пробелов и перенос строк */
   overflow-wrap: anywhere; /* Обрезка текста */
@@ -84,19 +85,27 @@
 }
 
 .client-message {
-  background-color: #6200ff;
+  background: linear-gradient(45deg, #6200ff, #5400b4);
   color: white;
   align-self: flex-end;
-  border-radius: 20px 20px 5px 20px;
+  border-radius: 15px 15px 5px 15px;
   animation: slideInRight 0.3s ease;
 }
 
 .freelancer-message {
-  background-color: #444;
+  background: linear-gradient(45deg, #303030, #4e4e4e);
   color: white;
   align-self: flex-start;
-  border-radius: 20px 20px 20px 5px;
+  border-radius: 15px 15px 15px 5px;
   animation: slideInLeft 0.3s ease;
+}
+
+.message-timestamp {
+  font-size: 12px;
+  color: #ccc;
+  margin-top: 2px; /* Уменьшили отступ */
+  display: block;
+  text-align: right;
 }
 
 .chat-input-container {
@@ -123,13 +132,9 @@
   padding: 10px;
   border-radius: 20px;
   border: none;
-  cursor: pointer;
   transition: background-color 0.3s;
 }
 
-.upload-button:hover, .send-button:hover {
-  background-color: #5a00e6;
-}
 
 .send-button {
   padding: 10px 15px;
@@ -144,15 +149,11 @@
   color: white;
   border: none;
   border-radius: 12px;
-  cursor: pointer;
   font-size: 18px;
   transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.complete-deal-button:hover {
-  background-color: #5a00e6;
-}
 
 .send-icon {
   color: #ffffff;
@@ -172,4 +173,213 @@
 @keyframes slideInLeft {
   from { transform: translateX(-20px); opacity: 0; }
   to { transform: translateX(0); opacity: 1; }
+}
+
+.reply-to {
+  font-size: 12px;
+  color: #ccc;
+  margin-bottom: 5px;
+  padding-left: 10px;
+  border-left: 2px solid #8a8a8a;
+}
+
+.uploaded-image {
+  max-width: 100%;
+  border-radius: 8px;
+  margin: 5px 0;
+}
+
+.uploaded-file-container {
+  overflow-wrap: anywhere; /* Обрезка текста */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #2c2c2c;
+  padding: 10px;
+  border-radius: 8px;
+  margin: 5px 0;
+  border: 2px solid #ffffff;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+
+
+.uploaded-file {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  margin-bottom: 5px;
+  transition: color 0.3s;
+}
+
+
+
+.file-info {
+  font-size: 12px;
+  color: #ccc;
+}
+
+.delete-button {
+  background:none;
+  border: none;
+  color: #ccc;
+  position: absolute;
+  top: 7px;
+  right: 5px;
+}
+
+
+.upload-progress {
+  text-align: center;
+  color: #ccc;
+  margin-top: 10px;
+}
+
+@keyframes fadeOut {
+  from {
+      opacity: 1;
+      transform: scale(1);
+  }
+  to {
+      opacity: 0;
+      transform: scale(0.9);
+  }
+}
+
+.message.fade-out {
+  animation: fadeOut 0.5s forwards;
+}
+
+@keyframes textInputAnimation {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.05);
+  }
+  100% {
+      transform: scale(1);
+  }
+}
+
+.chat-input.animated {
+  animation: textInputAnimation 0.2s ease-in-out;
+}
+
+.reply-to-container {
+  background-color: #333;
+  padding: 10px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: color 0.3s;
+}
+
+.reply-to-container p {
+  margin: 0;
+  color: #ccc;
+  font-size: 14px;
+}
+
+.reply-to-container button {
+  font-family: 'Montserrat', sans-serif;
+  background: none;
+  border: none;
+  color: #ff4d4d;
+  font-size: 14px;
+  transition: color 0.3s;
+}
+
+
+.upload-progress {
+  text-align: center;
+  color: #ccc;
+  margin-top: 10px;
+}
+
+@keyframes fadeOut {
+  from {
+      opacity: 1;
+      transform: scale(1);
+  }
+  to {
+      opacity: 0;
+      transform: scale(0.9);
+  }
+}
+
+.message.fade-out {
+  animation: fadeOut 0.5s forwards;
+}
+
+@keyframes textInputAnimation {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.05);
+  }
+  100% {
+      transform: scale(1);
+  }
+}
+
+.chat-input.animated {
+  animation: textInputAnimation 0.2s ease-in-out;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 80%;
+  max-width: 500px;
+  z-index: 1000;
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
+}
+
+.download-button {
+  display: block;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #6200ff;
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.request-extension-button, .open-dispute-button {
+  font-family: 'Montserrat', sans-serif;
+  width: 100%;
+  padding: 15px;
+  margin-top: 20px;
+  background: linear-gradient(45deg, #6200ff, #851bff);
+  color: white;
+  border: none;
+  border-radius: 12px;
+  font-size: 18px;
+  transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
