--- a/src/MyResponses.css
+++ b/src/MyResponses.css
@@ -8,19 +8,19 @@
   color: #e0e0e0;
 }
 
-.my-responses-container h1 {
+.my-responses-container-1 h1 {
   font-size: 32px;
   margin-bottom: 20px;
   color: #f1f1f1;
   padding-bottom: 10px;
 }
 
-.response-list {
+.response-list-1 {
   list-style: none;
   padding: 0;
 }
 
-.response-item {
+.response-item-1 {
   background: #2c2c2c;
   border: 2px solid #444;
   border-radius: 10px;
@@ -30,32 +30,28 @@
   transition: background 0.3s, border-color 0.3s;
 }
 
-.response-item a {
+.response-item-1 a {
   margin-left: 5px;
   text-decoration:wavy;
   color: #ccc
 }
 
-.response-item:hover {
-  background: #333;
-  border-color: #555;
-}
 
-.response-item p {
+.response-item-1 p {
   margin: 0;
   color: #e0e0e0;
 }
 
-.response-item p strong {
+.response-item-1 p strong {
   color: #ccc;
 }
 
-.response-item .response-date {
+.response-item-1 .response-date-1 {
   font-size: 15px;
   color: #999;
 }
 
-.empty-state {
+.empty-state-1 {
   text-align: center;
   font-size: 20px;
   color: #888;
